<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="blueapp_apkname">blueapp</string>
      
    <string name="app_name">深蓝解码</string>
    <string name="menu_settings">设置</string>
    <string name="home_main_tv">主页</string>
    <string name="news_main_tv">公司新闻</string>
    <string name="community_main_tv">大咖秀</string>
    <string name="about_main_tv">关于深蓝</string>
    <!-- 首页 -->
    <string name="home_title">首页</string>
    <string name="home_zan">赞</string>
    <string name="home_share">分享</string>
    <string name="home_forward">转发</string>
    <string name="home_comment">评论</string>
    <string name="zan_success">点赞成功</string>
    <string name="zan_cancel">取消点赞</string>
    <!-- 登录界面 -->
    <string name="log_register">注册</string>
    <string name="login">登录</string>
    <string name="login_name">用户名</string>
    <string name="login_pwd">密码</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="login_register">注册新用户</string>
    <!-- 注册界面 -->
    <string name="reg_uname">用户名</string>
    <string name="reg_upwd">密码</string>
    <string name="reg_email">邮箱</string>
    <string name="reg_phone">手机</string>
    <string name="reg_upwd2">密码确认</string>
    <string name="emailHint">请输入注册邮箱</string>
    <string name="phoneHint">请输入手机号码</string>
    <string name="reg_unameHint">请输入昵称</string>
    <string name="reg_upwdHint">请输入密码</string>
    <string name="reg_upwd2Hint">请再次输入密码</string>
    <string name="passwd_nosame">两次输入的密码不一致</string>
    <string name="reg_register">注册</string>
    <string name="agree">已阅读并同意协议</string>
    <string name="autoLogin">自动登录</string>
    <string name="qqLogin">QQ登录</string>

    <!-- 大咖秀列表 -->
    <string name="delete_error">只能删除自己的帖子哦</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_cancel">取消收藏</string>

    <string-array name="more_text">
        <item>收藏（取消收藏）</item>
        <item>加好友</item>
        <item>删除</item>
    </string-array>

    <!-- 详情页面 -->
    <string-array name="comment_operation">
        <item>加好友</item>
        <item>回复此评论</item>
        <item>查看TA的主页</item>
        <item>取消</item>
    </string-array>

    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>
    <!-- 通用 -->
    <string name="tips">提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="waiting">请稍后…</string>
    <string name="map">地图</string>
    <string name="more">加载中</string>
    <string name="create_file_error">创建文件失败，请检查SD卡！</string>
    <!-- 商家底部按钮栏 -->
    <string name="com_comment">评论</string>
    <string name="com_shared">分享</string>
    <string name="com_forward">转发</string>
    <string name="com_zan">赞</string>
    <string name="see_all_reviews">查看所有评论</string>
    <!-- 分享文本 -->
    <string name="share_content">成立于2009年的济南深蓝解码公司，专注互联网开发技术、用户体验设计、交互设计。
        	精于核心技术的钻研与提升，并于2012年精细划分成立内部各技术小组，包括设计前端组，PHP 技术组，
       		 手机android系统和IOS系统开发组，微信公众平台开发组，淘宝及api开发组等。</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_error">发送失败</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>

    <string-array name="text_share">
        <item>微信好友</item>
        <item>微信朋友圈</item>
        <item>短信</item>
        <item>新浪微博</item>
    </string-array>

    <!-- 行业资讯评论 -->
    <string name="com_comment_hint">输入您的评论内容</string>
    <string name="addComComment">评论</string>
    <!-- 发贴   评论     转发 -->
    <string name="post">发贴</string>
    <string name="forward">转发</string>
    <string name="newposting">发布新微博</string>
    <string name="posting_comment_hint">说点什么吧...</string>
    <!-- 帖子详情 -->
    <string name="name">某某</string>
    <string name="content">成立于2009年的济南深蓝解码公司，专注互联网开发技术、用户体验设计、交互设计。</string>
    <string name="beforeTime">2分钟前</string>
    <string name="refresh">刷新</string>
    <string name="zan">赞</string>
    <string name="comment">评论</string>
    <string name="response_comment">评论</string>
    <string name="zan_list">赞列表</string>
    <string name="comment_list">评论列表</string>
    <string name="share">分享</string>
    <string name="more1">更多</string>
    <string name="collect">收藏</string>

    <!-- 关于深蓝 -->
    <string name="dialing">一键拨号</string>
    <string name="address">联系地址</string>
    <string name="message">在线留言</string>
    <string name="messagehint">请输入留言内容...</string>
    <string name="submit">提交</string>
    <string name="about">关于深蓝</string>
    <string name="title_activity_user_space">UserSpaceActivity</string>
    <string name="action_settings">设置</string>
    <string name="version_text">版本更新</string>
    <string name="function_text">功能介绍</string>
    <string name="inform_text">系统通知</string>
    <string name="help_text">帮助与反馈</string>
    <!-- 我的通知 -->
    <string name="inform_me">我的</string>
    <string name="follower">新粉丝</string>
    <string name="inform_new">新消息提醒</string>
    <string name="inform_video">通知声音</string>
    <string name="no_faze_time">免打扰时间</string>
    <string name="vibration">震动</string>

    <!-- 我的资料 -->
    <string name="space">我的资料</string>
    <string name="nickname">昵称</string>
    <string name="user_ic">头像</string>
    <string name="account">账号</string>
    <string name="gender">性别</string>
    <string name="birth">出生年月</string>
    <string name="address_data">地址</string>
    <string name="sign">个性签名</string>
    <string name="signdefault">还没有发布签名</string>
    <string name="interest">兴趣爱好</string>

    <string-array name="user_data">
        <item>昵称</item>
        <item>性别</item>
        <item>出生日期</item>
        <item>地区</item>
        <item>个性签名</item>
        <item>兴趣爱好</item>
    </string-array>

    <!-- 个人中心 -->
    <string name="title_activity_user_center">个人中心</string>
    <string name="edit_data">编辑资料</string>
    <string name="user_data">我的资料</string>
    <string name="user_photo">我的相册</string>
    <string name="user_note">我的帖子</string>
    <string name="user_comment">我的评论</string>
    <string name="user_collect">我的收藏</string>
    <string name="user_inform">我的通知</string>
    <string name="exit_login">退出登录</string>

    <!-- 评论 -->
    <string name="comment_contenthint">说点什么吧...</string>
    <string name="comment_checkbox">同时作为评论发布</string>

    <!-- 错误\异常\提示 -->
    <string name="connect_timeout">连接超时请稍后，请稍后重试！</string>
    <string name="connect_exception">网络异常，请稍后重试！</string>
    <string name="check_net">请检查网络状态！</string>
    <string name="not_be_empty">输入不能为空</string>
    <string name="parse_exception">解析错误！</string>
    <string name="empty_list">列表是空的</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="socket_timeout">服务器响应超时</string>
    <string name="email_format_error">邮箱格式错误</string>
    <string name="operation_succeed">操作成功</string>
    <string name="has_been_reviewed">您已评价过</string>
    <string name="please_login">请先登录</string>
    <!-- 程序崩溃提示 -->
    <string name="app_crash">程序崩溃，将自动退出！</string>

    <!-- 页面的title -->
    <string name="title_activity_user_data">我的资料</string>
    <string name="title_activity_user_gallery">我的相册</string>
    <string name="title_activity_edit_data">编辑资料</string>
    <string name="title_activity_collection_list">我的收藏</string>
    <string name="title_activity_usernote_list">我的帖子</string>
    <string name="title_activity_edit_info">编辑</string>
    <string name="title_activity_share_popup_window">分享到</string>
    <string name="title_activity_about">关于深蓝</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_information">我的通知</string>
    <string name="title_activity_gallery">GalleryActivity</string>

</resources>