<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin5"
        android:layout_marginRight="@dimen/margin5"
        android:layout_marginTop="@dimen/margin20"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/customEditLabel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin5"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="@dimen/padding5"
            android:text="@string/reg_email" />

        <EditText
            android:id="@+id/mail_register_et"
            style="@style/customEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin5"
        android:layout_marginRight="@dimen/margin5"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/customEditLabel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin5"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="@dimen/padding5"
            android:text="@string/reg_phone" />

        <EditText
            android:id="@+id/phone_register_et"
            style="@style/customEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/phoneHint"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin5"
        android:layout_marginRight="@dimen/margin5"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/customEditLabel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin5"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/padding5"
            android:text="@string/reg_uname" />

        <EditText
            android:id="@+id/uname_register_et"
            style="@style/customEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/reg_unameHint"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin5"
        android:layout_marginRight="@dimen/margin5"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/customEditLabel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin5"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/padding5"
            android:text="@string/reg_upwd" />

        <EditText
            android:id="@+id/passwd_register_et"
            style="@style/customEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/reg_upwdHint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin5"
        android:layout_marginRight="@dimen/margin5"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/customEditLabel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin5"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/padding5"
            android:text="@string/reg_upwd2" />

        <EditText
            android:id="@+id/passwd2_register_et"
            style="@style/customEditText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/reg_upwd2Hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/register_register_btn"
        style="@style/greenBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin5"
        android:layout_marginRight="@dimen/margin5"
        android:layout_marginTop="@dimen/margin15"
        android:text="@string/reg_register" />

    

</LinearLayout>