<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding10" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/customEditLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/padding5"
            android:text="@string/login_name" />

        <EditText
            android:id="@+id/name_login_et"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_weight="2"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/customEditLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/padding5"
            android:text="@string/login_pwd" />

        <EditText
            android:id="@+id/password_login_et"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_weight="2"
            android:inputType="textPassword" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/autoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin5"
        android:layout_marginTop="@dimen/margin15"
        android:checked="true"
        android:text="@string/autoLogin" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/greenBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin5"
        android:layout_marginRight="@dimen/margin5"
        android:layout_marginTop="@dimen/margin15"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin5"
        android:layout_marginRight="@dimen/margin5"
        android:layout_marginTop="@dimen/margin20"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/forpwd_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetpwd" />

        <TextView
            android:id="@+id/register_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/login_register" />
    </RelativeLayout>

</LinearLayout>